--- a/main.css
+++ b/main.css
@@ -181,3 +181,26 @@ footer .footer-left {
 footer .footer-right {
   justify-self: right;
 }
+.btn{
+  border: 1px solid transparent;
+  cursor: pointer;
+  color:white;
+  background: #1a73e8;
+  padding: 9px 15px;
+  min-width: 80px;
+  text-decoration: none;
+ margin-left: 8px;
+ font-family: Google Sans,Roboto,Helvetica,Arial,sans-serif;
+ font-weight: 500;
+ font-size: 14px;
+ letter-spacing: .25px;
+ line-height: 16px;
+ margin-left: 10px;
+ margin-right: 8px;
+ min-width: 96px;
+ padding: 9px 23px;
+ text-align: center;
+ vertical-align: middle;
+ border-radius: 4px;
+ box-sizing: border-box;
+}
